# Ztocks

./: .gitignore  .vercelignore  DEPLOY.md  README.md  package-lock.json
contracts/: Cargo.toml
contracts/circuits/: input.example.json  portfolio_threshold.circom
contracts/contracts/: README.md
contracts/contracts/lending/: Cargo.toml
contracts/contracts/price-oracle/: Cargo.toml
contracts/contracts/vault/: Cargo.toml
contracts/contracts/zk-verifier/: Cargo.toml
contracts/contracts/zk-verifier/src/: lib.rs  test.rs  vkey.rs
contracts/scripts/: build_circuit.sh
frontend/: .env.example  .gitignore  SETUP.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/lending/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/trade/: page.tsx
frontend/components/layout/: Footer.tsx  Navbar.tsx
frontend/components/sections/: AssetsSection.tsx  CTASection.tsx  FeaturesSection.tsx  HeroChart.tsx  HeroSection.tsx  HowItWorksSection.tsx  LendingSection.tsx  PortfolioPreview.tsx
frontend/components/ui/: ConnectWalletModal.tsx  MiniChart.tsx  SetupBanner.tsx  StatCard.tsx  TickerBar.tsx
frontend/contexts/: WalletContext.tsx
frontend/hooks/: useAssetPrices.ts  useLending.ts  usePortfolio.ts  useTrade.ts  useWallet.ts  useZkProof.ts
frontend/lib/: mock-data.ts  utils.ts
frontend/lib/stellar/: config.ts  contracts.ts  wallet.ts
frontend/scripts/: generate-bindings.sh
frontend/types/: contract-bindings.d.ts
(+11 files in other folders)
